fix save song response
