# api/get_song_text.go
@@ -9,12 +9,23 @@ import (
 	"strings"
 )
 
-func GetSongText(pg *schema.TextPagination, id string, s *d.Storage, w http.ResponseWriter, r *http.Request) {
+// @Summary Get song text
+// @Tags songs
+// @Accept json
+// @Produce json
+//
+// @Param id path int true "Song id"
+// @Param pagination query schema.Pagination false "Pagination"
+//
+// @Success 200 {array} []string
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /songs/{id}/text [get]
+func GetSongText(pg *schema.Pagination, id string, s *d.Storage, w http.ResponseWriter, r *http.Request) {
 	text, err := s.GetSongTextDB(id)
 
 	if err != nil {
 		if err == sql.ErrNoRows {
-			w.WriteHeader(http.StatusNoContent)
+			w.WriteHeader(http.StatusNotFound)
 		} else {
 			http.Error(w, "Ошибка при извлечении песни", http.StatusInternalServerError)
 		}
