# schema/filter.go
@@ -1,0 +1,9 @@
+package schema
+
+type Filter struct {
+	Group       string `json:"group"`
+	Song        string `json:"song" `
+	Releasedate string `json:"releasedate"`
+	Text        string `json:"text"`
+	Link        string `json:"link"`
+}
