# schema/filterpag.go
@@ -1,9 +1,0 @@
-package schema
-
-type FilterPag struct {
-	Group       string `json:"group"`
-	Song        string `json:"song" `
-	Releasedate string `json:"releasedate"`
-	Text        string `json:"text"`
-	Link        string `json:"link"`
-}
